--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= render :partial => "layouts/header" %> 
   </div>
   <div class="content">
+    <div id="reg_form"></div>
     <%= yield %>
   </div>
   <div id="recipie_footer">
