--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,18 @@
-<div id="reg_form" style="display:none;">
-<%= form_for @user, :method => :post do|f| %>
+ 
+<% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+      <ul>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+<div id="reg_form" >
+<%= form_for @user, :validate => true, :method => :post do|f| %>
   <ul>
     <li>
       <label>Login:</label>
