--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,9 +32,9 @@
     </li>
     <li>
     <span><%=f.check_box :confirm_msg %>
-     Agreed for terms and conditions
+     <span class="msg">greed for terms and conditions</span>
     </li>
-    <li>
+    <li class="submit_btn">
       <%= f.submit "Create" %>
     </li>
   </ul>      
