--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,8 +18,7 @@
   #menu{
     float:left;
     width: 60%;
-  }
-  ul li{
+    ul li{
     display: inline-block;
     background-color: #000;
     border-radius: 5px;
@@ -29,14 +28,57 @@
     a {text-decoration: none;
       &:visited {color: #fff;}
 	}
-    label {display : block;
-	padding: 10px 0px;
-	}
-    input { width: 250px;}
-    }  
+   }  
+  }
 }
 .field_with_errors {
-    background-color: red;
-    display: table;
-    padding: 2px;
+  background-color: none;
+  display: table;
+  padding: 2px;
+	li > label.message { display: inline-block;}
+	
 }
+#reg_form ul {
+	padding: 0px;
+  li.submit_btn {
+    input[type=submit] { background-color: #577E3E;
+				-moz-border-radius: 5px;
+				border-radius: 5px;
+        float: right;
+				margin-right: 100px;
+        width: 200px;
+			}
+		}
+	li{
+    padding: 10px;
+		width: 98%;
+		height: 60px;
+		list-style: none;
+    span.msg {display: inline-block; color: #577E3E; vertical-align: 5px;}
+  		label { 
+  			display: block;
+				margin-bottom: 10px;
+				font-weight: bold;
+  	}
+		input {width: 300px;
+			border: 1px solid #577E3E;
+		}
+  label.message {
+		display: inline-block;
+		padding-left: 10px;
+    color: #C03307;
+    font-weight: normal;
+		&:before{content: url('error-icon.png');}
+	}
+	}
+}
+	
+.popup { 
+	border: 1px solid #577E3E;
+	.ui-widget-header {
+		background-image: none;
+		background-color: #577E3E;
+		border: 1px solid #577E3E;
+	}
+}
+
