--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <%= render :partial => "layouts/header" %> 
   </div>
   <div class="content">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <div id="reg_form"></div>
     <%= yield %>
   </div>
