--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <div id="logo">
   <%= image_tag "logo.jpg", :size => "100x100", :alt => "Edit Entry" %>
 </div>
-<!--<div id="menu">
+<div id="menu">
   <ul>
-    <li><%#= link_to "Home", users_path %></li>
-    <li><%#= link_to "Register", "javascript://",:id => "register" %></li>
-    <li><%#= link_to "Login", new_user_path %></li>
+  <%= render 'layouts/registration_items' %>
+  <%= render 'layouts/login_items' %>
+
   </ul>
-</div> -->
+</div> 
