--- a/app/views/layouts/_login_items.html.erb
+++ b/app/views/layouts/_login_items.html.erb
@@ -2,6 +2,12 @@
   <li>
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
   </li>
+  <li>
+    <%= link_to "Cuisines", cuisines_path %>
+  </li>
+  <li>
+    <%= link_to "Recipie", new_recipy_path %>
+  </li>
 <% else %>
   <li>
   <%= link_to('Login', new_user_session_path)  %>  
