--- a/app/views/layouts/_login_items.html.erb
+++ b/app/views/layouts/_login_items.html.erb
@@ -6,7 +6,7 @@
     <%= link_to "Cuisines", cuisines_path %>
   </li>
   <li>
-    <%= link_to "Recipie", new_recipy_path %>
+    <%= link_to "Recipie", new_recipe_path %>
   </li>
 <% else %>
   <li>
