--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,5 @@
 <%@recipes.each do |recipe|%>
-  <h2><%= recipe.title %></h2>
+  <h2><%= link_to recipe.title, recipe_path(recipe) %></h2>
   <div><%= image_tag(recipe.image.file_url) if recipe.image %></div>
   <h3>Ingredients</h3>
   <ul>
