comment add list addes

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment, :validate => true) do |f| %>
+<%= form_for([@recipe, @comment], :validate => true) do |f| %>
   <p><%=f.label :comment%><br/> 
     <%= f.text_area:comment, :class => "textarea" %></p>
   <p><%=f.submit "Save Comment"%></p>
