--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -33,6 +33,6 @@
     </div>
   </div>
   <h2>Comments</h2>
-  <%#= render "comments/list" %>
+  <%= render "comments/list" %>
   <%= render "comments/form" %>
  </div>
