--- a/app/views/comments/_list.html.erb
+++ b/app/views/comments/_list.html.erb
@@ -1,6 +1,4 @@
-<%#
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-%>
-
-<%= "index.html" %>
+<% for comment in @comments %>
+<p><span><%=comment.comment %></span><span class="actions"> <%=  link_to image_tag("delete.png", :border => "0"), recipe_comment_path(@recipe, comment), :method => "delete", :confirm => "Are you sure?" unless comment.user != current_user%>
+</span></p>
+<% end %>
