tagggings functionality added

--- a/app/assets/stylesheets/recipes.css.scss
+++ b/app/assets/stylesheets/recipes.css.scss
@@ -16,6 +16,7 @@
     }
    input[type=text], input[type=file], span, textarea {width: 150px;}
    textarea{height: 30px;}
+   input.tags {width: 350px;}
   }
   li.text{ textarea { width: 472px; height: 50px;}
     span {vertical-align: top; margin-top: 20px;}
