--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -64,11 +64,9 @@
     <span><%= f.label :favourate %></span>
     <%= f.check_box :favourate %>
   </li>
-  <li>
-    <%= f.fields_for :tags do |t| %>
-      <span><%= t.label :name%></span>
-      <%= t.text_field :name, :id=> "recipe_tag", :class => "tags" %>
-    <% end %>
+  <li class="text">
+    <span>Tags:</span>
+    <%= f.text_field :tag_list, :id=> "recipe_tag", :class => "tags" %>
   </li>
   <li><%= f.submit "Save Recipie" %></li>
 </ul>
